# NewsScrapping

./: LICENSE  README.md  noticias_tech.csv  pyproject.toml
src/: main.py
