[project]
name = "meu-projeto"
version = "0.1.0"
description = "Web Scraper"
authors = [
    {name = "mauf", email = "motamurono@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "typer (>=0.24.1,<0.25.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"